--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from preview.colorlib.com/theme/salvation/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 Feb 2024 12:44:39 GMT -->
 <head>
-<title>Salvation - Free Bootstrap 4 Template by Colorlib</title>
+<title>Salvation Church</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
@@ -85,7 +85,7 @@
 <div class="text mt-md-5 w-100 text-center">
 <h2>Welcome to Salvation Church</h2>
 <h1 class="mb-3">Perfect Church For Imperfect People</h1>
-<p class="mb-4 pb-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
+<p class="mb-4 pb-3">Far far away, behind the word mountains, far from the countries Nigeria and Ghana, there live the blind texts. Separated they live in.</p>
 <p class="mb-0"><a href="#" class="btn btn-primary py-3 px-2 px-md-4">Become A Volunteer</a></p>
 </div>
 </div>
